<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
tools:context="com.example.elena.a5quizapp.MainActivity">

    <LinearLayout
        style="@style/quiz_page_style"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <TextView
            style="@style/instructions_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro" />

        <TextView
            style="@style/question_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_1" />

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1_a" />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1_b" />

        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1_c" />

        <CheckBox
            android:id="@+id/checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1_d" />

        <TextView
            style="@style/question_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_2" />

        <RadioGroup
            android:id="@+id/radio_group_q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_two_answer_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_a" />

            <RadioButton
                android:id="@+id/question_two_answer_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_b" />

            <RadioButton
                android:id="@+id/question_two_answer_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_c" />

            <RadioButton
                android:id="@+id/question_two_answer_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_d" />
        </RadioGroup>

        <TextView
            style="@style/question_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_3" />

        <RadioGroup
            android:id="@+id/radio_group_q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/question_three_answer_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_a" />

            <RadioButton
                android:id="@+id/question_three_answer_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_b" />

        </RadioGroup>

        <TextView
            style="@style/question_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_4" />

        <EditText
            android:id="@+id/question_four_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            style="@style/button_style"
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitAnswers"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/total_points_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
